// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with placeholder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  text
</Text>
`;

exports[`renders with reminder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  Friday, Oct 31 @ 8:52 PM
</Text>
`;

exports[`renders without reminder or placeholder correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  Set a Reminder
</Text>
`;
